<resources>
    <!--Menu-->
    <string name="app_name">Skylark</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bird_list">Bird List</string>
    <string name="title_activity_birds_seen">Birds Seen</string>
    <string name="title_activity_camera">Camera Seen</string>
    <string name="title_activity_main">Skylark</string>

    <!--Bird List-->
    <string name="bird_seen">Seen</string>

    <!--Birds Seen-->

    <!--Map-->
    <string name="button_clear">Clear</string>
    <string name="button_mark">Mark</string>
    <string name="button_text">Text Location</string>

    <!--Map-->
    <string name="text_camera">Take a picture to see a Good Vibes filter !</string>
    <string name="button_camera">Camera</string>
    <string name="save_picture">Save Picture</string>

    <!--Register-->
    <string name="register_title">Register</string>
    <string name="button_register">Register</string>
    <string name="register_email">Enter your Email</string>
    <string name="register_password">Enter your Password</string>
    <string name="already_registered">Already registered ? Sign in Here</string>

    <!--Login-->
    <string name="login_title">User Log In</string>
    <string name="button_login">Sign In</string>
    <string name="login_email">Enter your Email</string>
    <string name="login_password">Enter your Password</string>
    <string name="no_account">No account ? Sign up here</string>

    <!--Profile-->
    <string name="profile_title">User Profile</string>
    <string name="profile_name">Enter your Name</string>
    <string name="profile_address">Enter your Address</string>
    <string name="button_profile_save">Save</string>
    <string name="button_logout">Logout</string>
    <string name="button_profile_list">List</string>

    <string name="action_logout">Logout</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="action_settings">Action Settings</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
