<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nryan.skylark.firebase.Profile">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textViewUserEmail"
            android:textStyle="normal|bold"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/editTextName"
            android:hint="@string/profile_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/editTextAddress"
            android:hint="@string/profile_address"/>

        <Button
            android:text="@string/button_profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddInfo" />

        <Button
            android:text="@string/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogout"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:text="@string/button_profile_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnList" />

        <Button
            android:text="BIRBS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birbBtn" />
    </LinearLayout>

</RelativeLayout>
